testing fix background on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,13 @@
+html {
+    background: url('../../assets/img/bg.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 body {
-    background: #FFF; /* white */
+    background: #FFF;
     color: #FFF;
     font-size: 14px;
     background: url('../../assets/img/bg.jpg') fixed;
@@ -53,7 +61,7 @@ a:visited, a:hover{
     border-width:0;
 }
 
-.nav-pills>li>a, 
+.nav-pills>li>a,
 .nav-pills>li.active>a{
     color: #fff;
     background-color: rgba(0, 0, 0, .5);
